--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
                 conhecimento e troca de experiências.</p>
             <a href="https://github.com/marqueslu">Github</a>
         </article>
+        <article>
+            <strong>Alex</strong>
+            <p>aluno do curso de GTI.</p>
+            <a href="https://github.com/Alexbarletta">Github</a>
+        </article>
     </div>
 
 </body>
